Fixed spacing in comments header.

--- a/app/webroot/css/elements/comment.css
+++ b/app/webroot/css/elements/comment.css
@@ -45,6 +45,7 @@
     color: #999;
     font-style: italic;
     font-size: 11px;
+    margin: 3px 0px;
 }
     
 .comments .actions {
