--- a/app/webroot/css/elements/wall_messages.css
+++ b/app/webroot/css/elements/wall_messages.css
@@ -52,6 +52,7 @@
     color: #999;
     font-style: italic;
     font-size: 11px;
+    margin: 3px 0px;
 }
 
 .meta .action {
